#285 add estimated time column

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,17 +30,18 @@ en:
   field_estimated_time: "Hours by default"
   field_estimated_default: "%{unit} by default"
   field_time_entry_hours: "Time spent"
-  
+
   label_settings_unit_default: "Default time unit"
   label_estimated: "%{value} %{unit}"
-  
+
   label_calculated_spent_hours: Calculated spent hours
   label_divergent_hours: Divergent hours
   label_remaining_hours: Remaining hours
   label_spent_hours: Spent hours
-  
+
   label_calculated_spent_time: Calculated spent time
   label_divergent_time: Divergent time
   label_remaining_time: Remaining time
-  
+  label_estimated_time: Estimated time
+
   label_warning_risk: [RISK]
