--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -30,7 +30,7 @@ fr:
   field_estimated_time: "Heures par defaut"
   field_estimated_default: "%{unit} par défaut"
   field_time_entry_hours: "Temps passé"
-  
+
   label_settings_unit_default: "Unité de temps par défaut"
   label_estimated: "%{value} %{unit}"
 
@@ -38,9 +38,10 @@ fr:
   label_divergent_hours: Heures dépassées
   label_remaining_hours: Heures restantes
   label_spent_hours: Heures passées
-  
+
   label_calculated_spent_time: Temps passés calculés
   label_divergent_time: Temps dépassé
   label_remaining_time: Temps restant
+  label_estimated_time: Temps estimé
 
   label_warning_risk: [RISQUE]
