--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,7 +47,7 @@ en:
   label_divergent_time: Divergent time
   label_remaining_time: Remaining time
   label_estimated_time: Estimated time
-  label_parent_feature: Feature
-  label_parent_subject: Parent subject
+  label_parent_feature: Grandparent
+  label_parent_subject: Feature
 
   label_warning_risk: [RISK]
