Revert "#240 rename columns 'Parent Subject' and 'Feature' in issues list"
This reverts commit b4c2dcaa4f3565287b6d2d6ab231e828d5ab0041.

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -48,7 +48,7 @@ fr:
   label_divergent_time: Temps dépassé
   label_remaining_time: Temps restant
   label_estimated_time: Temps estimé
-  label_parent_feature: Grand parent
+  label_grand_parent: Grand parent
   label_parent_subject: Feature
 
   label_warning_risk: [RISQUE]
